--- a/index.html
+++ b/index.html
@@ -15,25 +15,26 @@
 </head>
 
 <body>
-    <nav class="navbox">
-        <input type="search" placeholder="Search Plants" />
-        <button class="btnClk" onclick="helloo()">Shop Plants</button>
-    </nav>
-    <div>
-        <div class="container">
-            <h1>Indoor plants made easy</h1>
-            <div class="heading">
-                <p>Patch plants makes it easy for you to find a plant that fits
-                    your home environment</p>
+    <div class="container-main">
+        <nav class="navbox">
+            <input type="search" placeholder="Search Plants" />
+            <button class="btnClk" onclick="helloo()">Shop Plants</button>
+        </nav>
+        <div>
+            <div class="container">
+                <h1>Indoor plants made easy</h1>
+                <div class="heading">
+                    <p>Patch plants makes it easy for you to find a plant that fits
+                        your home environment</p>
+                </div>
             </div>
-        </div>
-        <div class="buttonBox">
-            <button class="btnClk">Shop Plants</button>
-        </div>
-        <!--slider one-->
+            <div class="buttonBox">
+                <button class="btnClk" onclick="helloo()">Shop Plants</button>
+            </div>
+            <!--slider one-->
 
-        <!--slider two-->
-        <!-- <div class="curved"></div>
+            <!--slider two-->
+            <!-- <div class="curved"></div>
             <div class="buttn-container">
                 <button class="nxt-btn"> > </button>
                 <button class="prev-btn"> > </button>
@@ -50,23 +51,26 @@
                 </div>
             </div>
             <div class="grph2"></div> -->
-        <!-- <div class="curved"></div> -->
-        <div class="curved1"></div>
-        <div class="carousel" data-flickity='{ "wrapAround": true }' style="height: 800px">
-            <div class="carousel-cell">
-                <img src="./Frame 2.png" style="width: 80%; height:500px" />
+            <!-- <div class="curved"></div> -->
+            <div class="slder">
+                <div class="curved1"></div>
+                <div class="carousel" data-flickity='{ "wrapAround": true }' style="height: 800px">
+                    <div class="carousel-cell">
+                        <img src="./Frame 2.png" style="width: 80%; height:500px" />
+                    </div>
+                    <div class="carousel-cell">
+                        <img src="./Frame 3.png" style="width: 80%; height:500px" /></div>
+
+                    <div class="carousel-cell">
+                        <img src="./Frame 4.png" style="width: 80%; height:500px" /></div>
+
+                </div>
+                <div class="grph3"></div>
             </div>
-            <div class="carousel-cell">
-                <img src="./Frame 3.png" style="width: 80%; height:500px" /></div>
-
-            <div class="carousel-cell">
-                <img src="./Frame 4.png" style="width: 80%; height:500px" /></div>
-
         </div>
-        <div class="grph3"></div>
+        <script src=" https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js">
+        </script>
     </div>
-    <script src=" https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js">
-    </script>
 </body>
 
 </html>
